HW7/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  clusterIP: None
  ports:
    - name: prometheus
      protocol: TCP
      port: 80
      targetPort: 9090
  selector:
    app: prometheus
